feat: layout nunjucks 설정

--- a/front/views/layout/footer.html
+++ b/front/views/layout/footer.html
@@ -1,104 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="../../public/css/layout/footer.css" />
-    </head>
-    <body>
-        {% block footer %}
-        <footer>
-            <div id="footer">
-                <!-- footerGithub -->
-                <div id="footerGithub">
-                    <div id="footerPersonalInfo">
-                        <h3>Teamezo Personal Infomation</h3>
-                    </div>
-                    <!-- footer_info -->
-                    <div id="footerInfoLeft">
-                        <ul>
-                            <li>
-                                은지 :
-                                <a href="https://github.com/mooddddd"
-                                    >https://github.com/mooddddd</a
-                                >
-                            </li>
-
-                            <li>
-                                찬수 :
-                                <a href="https://github.com/char1ey95"
-                                    >https://github.com/char1ey95</a
-                                >
-                            </li>
-                            <li>
-                                홍태 :
-                                <a href="https://github.com/ambious12"
-                                    >https://github.com/ambious12</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- footer_info -->
-                    <div id="footerInfoRight">
-                        <ul>
-                            <li>
-                                <img
-                                    src="../../public/img/footerTel.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>010-0000-0000</span>
-                                <img
-                                    src="../../public/img/footerMail.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>은지@gmail.com</span>
-                            </li>
-                            <li>
-                                <img
-                                    src="../../public/img/footerTel.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>010-0000-0000</span>
-                                <img
-                                    src="../../public/img/footerMail.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>찬수@gmail.com</span>
-                            </li>
-                            <li>
-                                <img
-                                    src="../../public/img/footerTel.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>010-0000-0000</span>
-                                <img
-                                    src="../../public/img/footerMail.png"
-                                    style="width: 1.1rem; height: 1.1rem"
-                                    alt="#"
-                                />
-                                <span>홍태@gmail.com</span>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- footerGithub -->
-
-                <!-- footerCopyRight-->
-                <div id="footerCopyRight">
-                    <p>CopyRight&copy; 2023 Designed by Teamezo</p>
-                    <p>우리 정말 할수있는거 맞지</p>
-                    <p>여기에 무슨문구넣지</p>
-                </div>
-                <!-- footerCopyRight-->
+{% block footer %}
+<footer>
+    <div id="footer">
+        <!-- footerGithub -->
+        <div id="footerGithub">
+            <div id="footerPersonalInfo">
+                <h3>Teamezo Personal Infomation</h3>
             </div>
-        </footer>
-        {% endblock%}
-    </body>
-</html>
+            <!-- footer_info -->
+            <div id="footerInfoLeft">
+                <ul>
+                    <li>
+                        은지 :
+                        <a href="https://github.com/mooddddd">https://github.com/mooddddd</a>
+                    </li>
+
+                    <li>
+                        찬수 :
+                        <a href="https://github.com/char1ey95">https://github.com/char1ey95</a>
+                    </li>
+                    <li>
+                        홍태 :
+                        <a href="https://github.com/ambious12">https://github.com/ambious12</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- footer_info -->
+            <div id="footerInfoRight">
+                <ul>
+                    <li>
+                        <img
+                            src="../../public/img/footerTel.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>010-0000-0000</span>
+                        <img
+                            src="../../public/img/footerMail.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>은지@gmail.com</span>
+                    </li>
+                    <li>
+                        <img
+                            src="../../public/img/footerTel.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>010-0000-0000</span>
+                        <img
+                            src="../../public/img/footerMail.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>찬수@gmail.com</span>
+                    </li>
+                    <li>
+                        <img
+                            src="../../public/img/footerTel.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>010-0000-0000</span>
+                        <img
+                            src="../../public/img/footerMail.png"
+                            style="width: 1.1rem; height: 1.1rem"
+                            alt="#"
+                        />
+                        <span>홍태@gmail.com</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- footerGithub -->
+
+        <!-- footerCopyRight-->
+        <div id="footerCopyRight">
+            <p>CopyRight&copy; 2023 Designed by Teamezo</p>
+            <p>우리 정말 할수있는거 맞지</p>
+            <p>여기에 무슨문구넣지</p>
+        </div>
+        <!-- footerCopyRight-->
+    </div>
+</footer>
+{% endblock%}
