--- a/front/public/css/root.css
+++ b/front/public/css/root.css
@@ -1,7 +1,7 @@
-:root{
-    --header: #ADC46D;
-    --footer: #526A7E;
-    --main: #FDFDFD;
+:root {
+    --header: #adc46d;
+    --footer: #526a7e;
+    --main: #fdfdfd;
     --fontColor: #2e2e2e;
 }
 
@@ -16,9 +16,10 @@ html {
 
 a {
     text-decoration: none;
-    color: var(--fontColor)
+    color: var(--fontColor);
 }
 
-ul, li {
+ul,
+li {
     list-style: none;
 }
