feat:adminUserEdit.html 구성 완료

--- a/front/views/layout/adminSide.html
+++ b/front/views/layout/adminSide.html
@@ -1,26 +1,26 @@
 {% block adminSide %}
-    <aside>
-        <div class="adminSideFisrt">
-            <div>EZO</div>
-            <img src="../../public/img/header.png" class="adminSideImg">
+<aside>
+    <div class="adminSideFisrt">
+        <div>EZO</div>
+        <img src="/img/header.png" class="adminSideImg" />
+    </div>
+    <div class="adminSideSecond">
+        <div class="adminSideContent">
+            <div><img class="adminSideicon" src="/img/adminSideUser.png" /></div>
+            <div>회원 관리</div>
         </div>
-        <div class="adminSideSecond">
-            <div class="adminSideContent">
-                <div><img class="adminSideicon" src="../../public/img/adminSideUser.png"></div>
-                <div>회원 관리</div>
-            </div>
-            <div class="adminSideContent">
-                <div><img class="adminSideicon" src="../../public/img/adminSideCategory.webp"></div>
-                <div>카테고리 관리</div>
-            </div>
-            <div class="adminSideContent">
-                <div><img class="adminSideicon" src="../../public/img/adminSideBoard.webp"></div>
-                <div>게시물 관리</div>
-            </div>
-            <div class="adminSideContent">
-                <div><img class="adminSideicon" src="../../public/img/adminSideStats.png"></div>
-                <div>통계</div>
-            </div>
+        <div class="adminSideContent">
+            <div><img class="adminSideicon" src="/img/adminSideCategory.webp" /></div>
+            <div>카테고리 관리</div>
         </div>
-    </aside>
+        <div class="adminSideContent">
+            <div><img class="adminSideicon" src="/img/adminSideBoard.webp" /></div>
+            <div>게시물 관리</div>
+        </div>
+        <div class="adminSideContent">
+            <div><img class="adminSideicon" src="/img/adminSideStats.png" /></div>
+            <div>통계</div>
+        </div>
+    </div>
+</aside>
 {% endblock %}
