--- a/front/public/css/layout/footer.css
+++ b/front/public/css/layout/footer.css
@@ -1,7 +1,8 @@
 footer {
+    position: relative;
     width: 100%;
-    height: 14rem;
-    background: silver;
+    height: 20rem;
+    background: var(--header);
 }
 
 #footer {
@@ -9,24 +10,29 @@ footer {
     flex-direction: column;
     align-items: center;
     width: 120rem;
-    height: 14rem;
+    height: 20rem;
     margin: 0 auto;
-    background: magenta;
 }
 
 #footer > #footerGithub {
     display: flex;
     justify-content: space-evenly;
-    width: 80rem;
+    width: 100%;
     height: 6.5rem;
-    margin: 1.5rem 0 0 1.5rem;
+    margin-top: 2rem;
     box-sizing: border-box;
 }
 
 #footer > #footerGithub > #footerPersonalInfo {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     margin-right: 2rem;
+}
+
+#footerPersonalInfo{
+    font-weight: 900;
+    font-size: 5rem;
+    font-family: var(--headerFont);
 }
 
 #footer > #footerGithub > #footerInfoLeft {
@@ -36,6 +42,8 @@ footer {
 }
 
 #footer > #footerGithub > #footerInfoLeft > ul > li {
+    font-weight: 700;
+    font-size: 1.2rem;
     margin-top: 1rem;
 }
 
@@ -46,6 +54,8 @@ footer {
 }
 
 #footer > #footerGithub > #footerInfoRight > ul > li {
+    font-weight: 700;
+    font-size: 1.2rem;
     margin-top: 1rem;
 }
 
@@ -54,10 +64,14 @@ footer {
 }
 
 #footer > #footerCopyRight {
+    position: absolute;
+    bottom: 1rem;
     display: flex;
     width: 80rem;
     height: 6.5rem;
-    margin-top: 1rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    font-weight: bolder;
     flex-direction: column;
     justify-content: center;
     align-items: center;
