--- a/front/views/layout/footer.html
+++ b/front/views/layout/footer.html
@@ -4,22 +4,22 @@
         <!-- footerGithub -->
         <div id="footerGithub">
             <div id="footerPersonalInfo">
-                <h3>Teamezo Personal Infomation</h3>
+                <h3>TeamEzo Personal Infomation</h3>
             </div>
             <!-- footer_info -->
             <div id="footerInfoLeft">
                 <ul>
                     <li>
-                        은지 :
+                        은지 
                         <a href="https://github.com/mooddddd">https://github.com/mooddddd</a>
                     </li>
 
                     <li>
-                        찬수 :
+                        찬수 
                         <a href="https://github.com/char1ey95">https://github.com/char1ey95</a>
                     </li>
                     <li>
-                        홍태 :
+                        홍태 
                         <a href="https://github.com/ambious12">https://github.com/ambious12</a>
                     </li>
                 </ul>
@@ -29,13 +29,13 @@
                 <ul>
                     <li>
                         <img
-                            src="../../public/img/footerTel.png"
+                            src="/img/footerTel.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
                         <span>010-0000-0000</span>
                         <img
-                            src="../../public/img/footerMail.png"
+                            src="/img/footerMail.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
@@ -43,13 +43,13 @@
                     </li>
                     <li>
                         <img
-                            src="../../public/img/footerTel.png"
+                            src="/img/footerTel.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
                         <span>010-0000-0000</span>
                         <img
-                            src="../../public/img/footerMail.png"
+                            src="/img/footerMail.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
@@ -57,13 +57,13 @@
                     </li>
                     <li>
                         <img
-                            src="../../public/img/footerTel.png"
+                            src="/img/footerTel.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
                         <span>010-0000-0000</span>
                         <img
-                            src="../../public/img/footerMail.png"
+                            src="/img/footerMail.png"
                             style="width: 1.1rem; height: 1.1rem"
                             alt="#"
                         />
@@ -77,8 +77,6 @@
         <!-- footerCopyRight-->
         <div id="footerCopyRight">
             <p>CopyRight&copy; 2023 Designed by Teamezo</p>
-            <p>우리 정말 할수있는거 맞지</p>
-            <p>여기에 무슨문구넣지</p>
         </div>
         <!-- footerCopyRight-->
     </div>
