feat: footer수정 - 로고추가

--- a/front/views/layout/footer.html
+++ b/front/views/layout/footer.html
@@ -1,86 +1,43 @@
 {% block footer %}
 <footer>
     <div id="footer">
-        <!-- footerGithub -->
-        <div id="footerGithub">
-            <div id="footerPersonalInfo">
-                <h3>TeamEzo Personal Infomation</h3>
+        <div class="footerHeader">
+            <ul>
+                <li><a href="#">홈페이지</a></li>
+                <li><a href="#">공지사항</a></li>
+                <li><a href="#">게시판</a></li>
+                <li><a href="#">Q & A</a></li>
+                <li><a href="#">관리자페이지</a></li>
+            </ul>
+        </div>
+        <div class="footerContents">
+            <div class="footerLogoWrap">
+                <div class="footerLogo">TeamEzo</div>
             </div>
-            <!-- footer_info -->
-            <div id="footerInfoLeft">
-                <ul>
-                    <li>
-                        은지 
-                        <a href="https://github.com/mooddddd">https://github.com/mooddddd</a>
-                    </li>
-
-                    <li>
-                        찬수 
-                        <a href="https://github.com/char1ey95">https://github.com/char1ey95</a>
-                    </li>
-                    <li>
-                        홍태 
-                        <a href="https://github.com/ambious12">https://github.com/ambious12</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- footer_info -->
-            <div id="footerInfoRight">
-                <ul>
-                    <li>
-                        <img
-                            src="/img/footerTel.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>010-0000-0000</span>
-                        <img
-                            src="/img/footerMail.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>은지@gmail.com</span>
-                    </li>
-                    <li>
-                        <img
-                            src="/img/footerTel.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>010-0000-0000</span>
-                        <img
-                            src="/img/footerMail.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>찬수@gmail.com</span>
-                    </li>
-                    <li>
-                        <img
-                            src="/img/footerTel.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>010-0000-0000</span>
-                        <img
-                            src="/img/footerMail.png"
-                            style="width: 1.1rem; height: 1.1rem"
-                            alt="#"
-                        />
-                        <span>홍태@gmail.com</span>
-                    </li>
-                </ul>
+            <div class="footerContentWrap">
+                <div class="footerContent">
+                    <h2>김홍태</h2>
+                    <div><a href="#"><img src="/img/footer_email.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_github.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                </div>
+                <div class="footerContent">
+                    <h2>이은지</h2>
+                    <div><a href="#"><img src="/img/footer_email.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_github.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                </div>
+                <div class="footerContent">
+                    <h2>강찬수</h2>
+                    <div><a href="#"><img src="/img/footer_email.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_github.png"></a></div>
+                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                </div>
             </div>
         </div>
-        <!-- footerGithub -->
-
-        <!-- footerCopyRight-->
-        <div id="footerCopyRight">
-            <p>CopyRight&copy; 2023 Designed by Teamezo</p>
+        <div class="footerCopyRight">
+            <p>CopyRight&copy; 2023 Designed by TeamEzo</p>
         </div>
-        <!-- footerCopyRight-->
     </div>
-    <!-- footerCopyRight-->
-  </div>
 </footer>
 {% endblock%}
