--- a/front/public/css/layout/footer.css
+++ b/front/public/css/layout/footer.css
@@ -1,78 +1,83 @@
 footer {
-    position: relative;
     width: 100%;
-    height: 20rem;
     background: var(--header);
+    font-size: 2rem;
 }
 
 #footer {
+    margin: 0 auto;
+    width: 120rem;
+    height: 25rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 120rem;
-    height: 20rem;
-    margin: 0 auto;
+    justify-content: space-evenly;
 }
 
-#footer > #footerGithub {
+.footerHeader {
+    width: 100%;
+    height: 15%;
+}
+
+.footerHeader > ul {
+    margin: 0 auto;
+    width: 90rem;
     display: flex;
     justify-content: space-evenly;
+}
+
+.footerHeader > ul > li {
+    display: inline-block;
+    width: 15%;
+    height: 100%;
+}
+
+.footerHeader > ul > li > a {
     width: 100%;
-    height: 6.5rem;
-    margin-top: 2rem;
-    box-sizing: border-box;
-}
-
-#footer > #footerGithub > #footerPersonalInfo {
-    display: flex;
-    /* align-items: center; */
-    margin-right: 2rem;
-}
-
-#footerPersonalInfo{
-    font-weight: 900;
-    font-size: 5rem;
-    font-family: var(--headerFont);
-}
-
-#footer > #footerGithub > #footerInfoLeft {
-    display: flex;
-    align-items: center;
-    margin-right: 3rem;
-}
-
-#footer > #footerGithub > #footerInfoLeft > ul > li {
+    padding-top: 1rem;
     font-weight: 700;
-    font-size: 1.2rem;
-    margin-top: 1rem;
 }
 
-#footer > #footerGithub > #footerInfoRight {
+.footerContents {
+    width: 100%;
+    height: 50%;
     display: flex;
-    align-items: center;
-    margin-right: 3rem;
-}
-
-#footer > #footerGithub > #footerInfoRight > ul > li {
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-top: 1rem;
-}
-
-#footer > #footerGithub > #footerInfoRight > ul > li > span {
-    margin-right: 1rem;
-}
-
-#footer > #footerCopyRight {
-    position: absolute;
-    bottom: 1rem;
-    display: flex;
-    width: 80rem;
-    height: 6.5rem;
-    margin-top: 3rem;
-    font-size: 2rem;
-    font-weight: bolder;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+}
+
+.footerLogoWrap {
+    width: 40%;
+}
+
+.footerLogo {
+    font-size: 8rem;
+    font-family: var(--headerFont);
+    background-color: black;
+    color: var(--main);
+    text-align: center;
+    border-radius: 0.5rem;
+}
+
+.footerContentWrap {
+    width: 30%;
+}
+
+.footerContent {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.footerContent > h2, div {
+    margin: 0 1rem;
+}
+
+.footerContent > div > a > img {
+    width: 3rem;
+    height: 3rem;
+}
+
+.footerCopyRight {
+    height: 15%;
+    text-align: center;
+    font-weight: bolder;
 }
