fixed: header 로고 추가

--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -2,10 +2,7 @@
 <header>
   <div id="header">
     <div class="headerLeft">
-      <h1>EZO</h1>
-      <div>
-        <a href="#"><img src="/img/header.png" class="headerLogoImg" /></a>
-      </div>
+      <a href="#"><div class="headerLogo">TeamEzo</div></a>
     </div>
     <div class="headerCenter">
       <div><a href="#">HOME</a></div>
