--- a/front/public/css/layout/header.css
+++ b/front/public/css/layout/header.css
@@ -2,6 +2,8 @@ header {
     width: 100%;
     height: 15rem;
     background: var(--header);
+    display: flex;
+    align-items: center;
 }
 
 #header {
@@ -10,6 +12,14 @@ header {
     display: flex;
     justify-content: space-between;
     color: var(--main);
+}
+
+.headerLogo {
+    font-size: 8rem;
+    font-family: var(--headerFont);
+    color: var(--main);
+    text-align: center;
+    border-radius: 0.5rem;
 }
 
 .headerLogoImg {
