fixed: profil 수정

--- a/front/views/user/profile.html
+++ b/front/views/user/profile.html
@@ -28,19 +28,19 @@
                         <div class="profileImgWrap2 profileBox">
                             <div class="profileAccount">
                                 <div class="profileAccountSubject">계정 정보</div>
-                                <div class="profileAccountUpdate">수정</div>
+                                <a href="#"><div class="profileAccountUpdate">수정</div></a>
                             </div>
                             <div class="profileAccountInfo">
                                 <div class="profileAccountInfoContent">
-                                    <div>이 &nbsp&nbsp 름</div>
+                                    <div>이 &nbsp&nbsp&nbsp 름</div>
                                     <div>아무개</div>
                                 </div>
                                 <div class="profileAccountInfoContent">
-                                    <div>아이디</div>
+                                    <div>아&nbsp이&nbsp디</div>
                                     <div>abcd</div>
                                 </div>
                                 <div class="profileAccountInfoContent">
-                                    <div>이메일</div>
+                                    <div>이&nbsp메&nbsp일</div>
                                     <div>abcd@gmail.com</div>
                                 </div>
                             </div>
