--- a/front/public/css/user/profile.css
+++ b/front/public/css/user/profile.css
@@ -61,14 +61,14 @@
     cursor: pointer;
     font-weight: 600;
     margin: 1rem 0;
-    padding: 0.5rem;
+    padding: 1rem;
     width: 10rem;
     border: none;
     font-size: 2rem;
 }
 
 .profileInfoImg > button:hover {
-    color: #ececec;
+    color: var(--main);
 }
 
 .profileInfoRight {
@@ -99,13 +99,26 @@
 }
 
 .profileAccountSubject {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 700;
 }
 
 .profileAccountUpdate {
-    font-size: 1rem;
+    font-size: 2rem;
     margin: 0 1rem;
+}
+
+.profileAccount > a {
+    padding: 1rem;
+    font-weight: 600;
+    background-color: #ececec;
+    border-radius: 0.5rem;
+    transition: all 0.5s;
+}
+
+.profileAccount > a:hover {
+    background-color: var(--footer);
+    color: var(--main);
 }
 
 .profileAccountInfo {
@@ -120,8 +133,9 @@
 }
 
 .profileAccountInfoContent > div {
-    font-size: 1.5rem;
     margin: 0 1rem;
+    font-size: 2rem;
+    font-weight: 700;
 }
 
 .profileToggle {
