--- a/front/views/user/login.html
+++ b/front/views/user/login.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../../public/css/root.css" />
-        <link rel="stylesheet" href="../../public/css/user/login.css" />
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/user/login.css" />
     </head>
     <body>
         <div id="loginWrap">
@@ -28,8 +28,8 @@
                     <div id="loginApi">
                         <p>Or Sign in With</p>
                         <div id="loginApiImg">
-                            <a href="#"><img src="../../public/img/loginKakao.png" /></a>
-                            <a href="#"><img src="../../public/img/loginGoogle.png" /></a>
+                            <a href="#"><img src="/img/loginKakao.png" /></a>
+                            <a href="#"><img src="/img/loginGoogle.png" /></a>
                         </div>
                     </div>
                     <div id="loginSignUp">
