--- a/front/views/user/welcome.html
+++ b/front/views/user/welcome.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../../public/css/root.css" />
-        <link rel="stylesheet" href="../../public/css/user/welcome.css" />
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/user/welcome.css" />
         <title>Document</title>
     </head>
     <body>
         <div id="welcomeWrap">
             <div id="welcomeForm">
                 <div id="welcomeImg">
-                    <img src="../../public/img/img.png" style="width: 25rem; height: 25rem" />
+                    <img src="/img/img.png" style="width: 25rem; height: 25rem" />
                 </div>
                 <div id="welcomeComment">
                     <h1>환영합니다!</h1>
