--- a/front/views/error.html
+++ b/front/views/error.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../public/css/root.css" />
-        <link rel="stylesheet" href="../public/css/user/error.css" />
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/user/error.css" />
         <title>Document</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
             <div id="errorForm">
                 <div id="errorImg">
                     <img
-                        src="../public/img/2697398bad5927125f3db2f8a248ca15effd194bae87d73dd00522794070855d.png"
+                        src="/img/2697398bad5927125f3db2f8a248ca15effd194bae87d73dd00522794070855d.png"
                         style="width: 25rem; height: 25rem"
                     />
                 </div>
