fixed: footer.css 수정

--- a/front/views/user/join.html
+++ b/front/views/user/join.html
@@ -7,7 +7,7 @@
         <title>Document</title>
         <link rel="stylesheet" href="/css/root.css">
         <link rel="stylesheet" href="/css/user/join.css">
-        <!-- <link rel="stylesheet" href="/css/layout/footer.css"> -->
+        <link rel="stylesheet" href="/css/layout/footer.css">
         <script src="/js/user/join.js" defer></script>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <a href="#" id="joinLogo">
                 TeamEzo
             </a>
-            <form class="joinWrap" action="#">
+            <form class="joinWrap" action="/">
                 <div class="join">
                     <div class="apiWrap">
                         <div class="api">
@@ -94,6 +94,6 @@
                 </div>
             </form>
         </section>
-        <!-- {% include "layout/footer.html" %} -->
+        {% include "layout/footer.html" %}
     </body>
 </html>
