feat:boardWrit 해시태그 js 기추가

--- a/front/views/board/category/boardWrite.html
+++ b/front/views/board/category/boardWrite.html
@@ -45,7 +45,7 @@
                                 <input type="file" name="img" />
                             </li>
 
-                            <li class="hashtagLi">
+                            <li class="hashtagLi" style="margin-top: 1.5rem">
                                 <!-- <button class="hashtagBtn">#해시태그</button> -->
                                 <span style="color: gray"># </span>
                                 <input type="text" class="hashtagBox" name="tagName" placeholder="해시태그" style="border: none" />
