--- a/front/views/board/category/boardEdit.html
+++ b/front/views/board/category/boardEdit.html
@@ -1,34 +1,63 @@
-{% block editForm %}
-<article>
-  <div id="writeForm">
-    <div class="top">
-      <h1>글수정</h1>
-      <span></span>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/css/root.css" />
+        <link rel="stylesheet" href="/css/layout/header.css" />
+        <link rel="stylesheet" href="/css/layout/writeForm.css" />
+        <link rel="stylesheet" href="/css/layout/footer.css" />
 
-    <div class="write">
-      <form method="post" action="/board/modify">
-        <input type="hidden" name="idx" value="{{list.idx}}" />
-        <ul>
-          <li class="subject">
-            <select name="mainCategory_idx">
-              <option value="" selected>--카테고리 선택--</option>
-              <option value="IT">IT</option>
-              <option value="food">음식/맛집</option>
-            </select>
-            <br />
-            <input type="text" name="subject" value="{{list.title}}" />
-          </li>
+        <title>Document</title>
+    </head>
+    <body>
+        {% include 'layout/header.html' %}
+        <article>
+            <div id="writeForm">
+                <div class="top">
+                    <h1>글수정</h1>
+                    <span></span>
+                </div>
 
-          <li class="content">
-            <textarea name="content">{{list.content}}</textarea><br />
-            <input type="file" name="img" />
-          </li>
-        </ul>
-        <button class="submitBtn">수정하기</button>
-      </form>
-      <button class="cancelBtn" onclick="location.href='board/list'">돌아가기</button>
-    </div>
-  </div>
-</article>
-{%endblock%}
+                <div class="write">
+                    <form method="post" action="/board/write">
+                        <input type="hidden" name="idx" value="{{list.idx}}" />
+                        <ul>
+                            <li class="subject">
+                                <select class="mainCategorySelect" name="mainCategory_idx" onchange="categoryChange(this)">
+                                    <option>--카테고리 선택--</option>
+                                    <!-- 만약에 벨류값 없으면 alert 뜨게 -->
+                                    <option value="IT">IT</option>
+                                    <option value="food">음식/맛집</option>
+                                    <option value="etc">기타</option>
+                                </select>
+
+                                <select class="subCategory" name="subName">
+                                    <option>--카테고리 선택--</option>
+                                </select>
+
+                                <br />
+                                <input type="text" name="subject" placeholder="제목을 입력하세요" value="{{list.title}}" />
+                            </li>
+
+                            <li class="content">
+                                <textarea name="content" placeholder="내용을 입력하세요">{{list.content}}</textarea><br />
+                                <input type="file" name="img" />
+                            </li>
+
+                            <li class="hashtagLi" style="margin-top: 1.5rem">
+                                <span style="color: gray"># </span>
+                                <input type="text" class="hashtagBox" name="tagName" placeholder="해시태그" style="border: none" />
+                            </li>
+                        </ul>
+                        <button class="submitBtn">등록하기</button>
+                    </form>
+                    <button class="cancelBtn" onclick="location.href='board/list'">돌아가기</button>
+                </div>
+            </div>
+        </article>
+        <script src="/js/board/category/boardWrite.js" type="text/javascript"></script>
+        {% include 'layout/footer.html' %}
+    </body>
+</html>
