--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -1,4 +1,15 @@
-{% block header %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/root.css">
+  <link rel="stylesheet" href="/css/layout/header.css">
+</head>
+<body>
+  {% block header %}
 <header>
   <div id="header">
     <div class="headerLeft">
@@ -15,6 +26,14 @@
       <div><img class="headerImg" src="/img/magnifier.png" /></div>
       <div><a href="#">LOGIN</a></div>
     </div>
+    <div class="hamburger_btn">
+      <span class="hamburger num1"></span>
+      <span class="hamburger num2"></span>
+      <span class="hamburger num3"></span>
+  </div>
   </div>
 </header>
 {% endblock %}
+  
+</body>
+</html>
